force-app/main/default/objects/Sales_Briefing__c/Sales_Briefing__c.object-meta.xml
<CustomObject>
    <description>PRM 360 Home &quot;오늘의 Sales Briefing&quot; 카드용 사용자별/일자별 AI 브리핑 저장소. PRM360SalesBriefingScheduler가 매일 06:00(Org 기본 Time Zone)에 사용자별로 1건씩 생성/갱신하고, PRM360Controller.getMyTodaysSalesBriefing()은 오늘자 레코드를 읽기만 한다.</description>
    <label>Sales Briefing</label>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>Sales Briefing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Briefings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>