force-app/main/default/objects/Sales_Briefing__c/fields/Briefing_Date__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Date__c</fullName>
    <label>Briefing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>