force-app/main/default/objects/Sales_Briefing__c/fields/Briefing_Key__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Briefing Key</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>