force-app/main/default/objects/Sales_Briefing__c/fields/Briefing_Text__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Text__c</fullName>
    <label>Briefing Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>