force-app/main/default/objects/Sales_Briefing__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Briefings</relationshipLabel>
    <relationshipName>Sales_Briefings</relationshipName>
    <type>Lookup</type>
</CustomField>